test/should-fail/vsgc3468b/pak2/B.f3
/**
 * @subtest
 */
package vsgc3468b.pak2;

import vsgc3468b.pak1.A;

public class B extends A{}

public class B2 extends A.A2 {};
